<?xml version="1.0"?>
<package format="2">
  <name>pcd_file_publisher</name>
  <version>0.0.1</version>
  <description>The pcd_file_publisher package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>

  <build_depend>PCL</build_depend>
  <exec_depend>PCL</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
